--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+</head>
 
-  </body>
+<body class="page">
+  <header class="page-header">
+    <a class="page-header__logo">
+      <img src="https://via.placeholder.com/150x150" width="138" height="70" alt="Логотип города Седона">
+    </a>
+    <button class="page-header__hide" type="button">
+      <span></span>
+    </button>
+    <button class="page-header__show" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
+    <nav class="main-nav">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a aria-label="Переход в раздел Информация">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#" aria-label="Переход в раздел Фото и видео">Фото и Видео</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#" aria-label="Переход в раздел Карта штата">Форма отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#" aria-label="Переход в раздел Гостиницы">Html Academy</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Информация о городе Седона</h1>
+    <section class="main-promo">
+      <h2 class="visually-hidden">Приветствие от города</h2>
+      <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="456" height="350"
+        alt="Приветствие города">
+    </section>
+    <section class="main-features">
+      <h2 class="visually-hidden">Преимущества города</h2>
+      <span class="main-features__title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
+      <span class="main-features__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+      <ol class="main-features__list">
+        <li class="main-features__item">
+          <span class="main-features__title">Настоящий городок</span>
+          <span class="main-features__number">– №1 –</span>
+          <span class="main-features__text">Седона - не аттракцион для туристов, там течёт своя жизнь</span>
+          <img src="https://via.placeholder.com/150x150" width="800" height="256" alt="Вид на город">
+          <ul class="main-features__item-list">
+            <li>
+              <div class="main-features__picture"></div>
+              <span class="main-features__title">Жильё</span>
+              <span class="main-features__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
+            </li>
+            <li>
+              <div class="main-features__picture"></div>
+              <span class="main-features__title">Еда</span>
+              <span class="main-features__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
+            </li>
+            <li>
+              <div class="main-features__picture"></div>
+              <span class="main-features__title">Сувениры</span>
+              <span class="main-features__text">Не только китайского, но и местного производства!</span>
+            </li>
+          </ul>
+        </li>
+        <li class="main-features__item">
+          <img src="https://via.placeholder.com/150x150" width="800" height="256" alt="Вид на горы">
+          <span class="main-features__title">Там есть Мост дьявола</span>
+          <span class="main-features__number">– №2 –</span>
+          <span class="main-features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
+        </li>
+        <li class="main-features__item">
+          <span class="main-features__title">Небольшая площадь</span>
+          <span class="main-features__number">– № 3 –</span>
+          <span class="main-features__text">Все достопримечательности находятся очень близко</span>
+        </li>
+        <li class="main-features__item">
+          <span class="main-features__title">Красивая дорога</span>
+          <span class="main-features__number">– № 4 –</span>
+          <span class="main-features__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
+        </li>
+        <li class="main-features__item">
+          <span class="main-features__title">Мало туристов</span>
+          <span class="main-features__number">– № 5 –</span>
+          <span class="main-features__text">Большинство едет в Гранд Каньон и толпится там</span>
+        </li>
+      </ol>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <p class="page-footer-text">#Visitsedona</p>
+    <ul class="page-footer__list" aria-label="Социальные сети">
+      <li class="page-footer__item">
+        <a href="#" aria-label="Перейти в аккаунт города в Twitter">
+          <img src="" width="17" height="15" alt="Twitter">
+        </a>
+      </li>
+      <li class="page-footer__item">
+        <a href="#" aria-label="Перейти в аккаунт города в Facebook">
+          <img src="" width="9" height="19" alt="Facebook">
+        </a>
+      </li>
+      <li class="page-footer__item">
+        <a href="#" aria-label="Перейти в аккаунт города в YouTube">
+          <img src="" width="20" height="14" alt="YouTube">
+        </a>
+      </li>
+    </ul>
+    <p class="page-footer__copyright-text">Разработано</p>
+    <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на сайт разработчика HTML Academy">
+    </a>
+  </footer>
+</body>
+
 </html>
