исправлены недочеты по тексту, ссылки

--- a/source/index.html
+++ b/source/index.html
@@ -12,31 +12,27 @@
     <a class="page-header__logo">
       <img src="https://via.placeholder.com/150x150" width="138" height="70" alt="Логотип города Седона">
     </a>
-    <button class="page-header__hide" type="button">
-      <span></span>
-    </button>
-    <button class="page-header__show" type="button">
-      <span class="visually-hidden">Открыть меню</span>
-    </button>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a aria-label="Переход в раздел Информация">Главная</a>
+          <a>Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Фото и видео">Фото и Видео</a>
+          <a href="photo.html">Фото и Видео</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Карта штата">Форма отзыва</a>
+          <a href="form.html">Форма отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Гостиницы">Html Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">Html Academy</a>
         </li>
       </ul>
+      <button class="page-header__button" type="button"></button>
+    </nav>
     </nav>
   </header>
   <main class="page-main">
-    <h1 class="visually-hidden">Информация о городе Седона</h1>
+    <h1 class="visually-hidden">Информация о городе</h1>
     <section class="main-promo">
       <h2 class="visually-hidden">Приветствие от города</h2>
       <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="456" height="350"
@@ -54,24 +50,22 @@
           <img src="https://via.placeholder.com/150x150" width="800" height="256" alt="Вид на город">
           <ul class="main-features__item-list">
             <li>
-              <div class="main-features__picture"></div>
               <span class="main-features__title">Жильё</span>
               <span class="main-features__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
             </li>
             <li>
-              <div class="main-features__picture"></div>
               <span class="main-features__title">Еда</span>
               <span class="main-features__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
             </li>
             <li>
-              <div class="main-features__picture"></div>
               <span class="main-features__title">Сувениры</span>
               <span class="main-features__text">Не только китайского, но и местного производства!</span>
             </li>
           </ul>
         </li>
         <li class="main-features__item">
-          <img src="https://via.placeholder.com/150x150" width="800" height="256" alt="Вид на горы">
+          <img src="https://via.placeholder.com/150x150" width="800" height="256"
+            alt="Вид достопримечательность Мост Дьявола">
           <span class="main-features__title">Там есть Мост дьявола</span>
           <span class="main-features__number">– №2 –</span>
           <span class="main-features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
@@ -114,8 +108,7 @@
       </li>
     </ul>
     <p class="page-footer__copyright-text">Разработано</p>
-    <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на сайт разработчика HTML Academy">
-    </a>
+    <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на сайт разработчика HTML Academy"></a>
   </footer>
 </body>
 
