--- a/source/photo.html
+++ b/source/photo.html
@@ -12,27 +12,23 @@
     <a class="page-header__logo">
       <img src="https://via.placeholder.com/150x150" width="138" height="70" alt="Логотип города Седона">
     </a>
-    <button class="page-header__hide" type="button">
-      <span></span>
-    </button>
-    <button class="page-header__show" type="button">
-      <span></span>
-    </button>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Информация">Главная</a>
+          <a href="index.html">Главная</a>
         </li>
         <li class="site-list__item site-list__item--active">
-          <a aria-label="Переход в раздел Фото и видео">Фото и Видео</a>
+          <a>Фото и Видео</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Карта штата">Форма отзыва</a>
+          <a href="form.html">Форма отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Гостиницы">Html Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </li>
       </ul>
+      <button class="page-header__button" type="button"></button>
+    </nav>
     </nav>
   </header>
   <main class="page-main">
@@ -44,7 +40,8 @@
     </section>
     <section class="main-media">
       <h2 class="main-media__header">Фото и видео</h2>
-      <span class="main-media__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
+      <span class="main-media__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть
+        о политике и экономике.</span>
       <ul class="main-media__list">
         <li class="main-media__item">
           <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
@@ -54,7 +51,7 @@
           <span class="main-media__likes-number"></span>
         </li>
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
+          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото растения">
           <span class="main-media__text">Местная растительность</span>
           <span class="main-media__text">Автор фото: Сергей</span>
           <button type="button" class="main-media__button"></button>
@@ -68,8 +65,9 @@
           <span class="main-media__likes-number"></span>
         </li>
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
-          <span class="main-media__text">мост дьявола</span>
+          <img src="https://via.placeholder.com/150x150" width="280" height="280"
+            alt="Фото достопримечательности Мост Дьявола">
+          <span class="main-media__text">Мост Дьявола</span>
           <span class="main-media__text">Автор фото: Антон</span>
           <button type="button" class="main-media__button"></button>
           <span class="main-media__likes-number"></span>
