--- a/source/form.html
+++ b/source/form.html
@@ -12,37 +12,34 @@
     <a class="page-header__logo">
       <img src="https://via.placeholder.com/150x150" width="138" height="70" alt="Логотип города Седона">
     </a>
-    <button class="page-header__hide" type="button">
-      <span></span>
-    </button>
-    <button class="page-header__show" type="button">
-      <span></span>
-    </button>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item">
-          <a href="#" aria-label="Переход в раздел Информация">Главная</a>
+          <a href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Фото и видео">Фото и Видео</a>
+          <a href="photo.html">Фото и Видео</a>
         </li>
         <li class="site-list__item site-list__item--active">
-          <a aria-label="Переход в раздел Карта штата">Форма отзыва</a>
+          <a>Форма отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#" aria-label="Переход в раздел Гостиницы">Html Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">Html Academy</a>
         </li>
       </ul>
+      <button class="page-header__button" type="button"></button>
     </nav>
   </header>
   <main class="page-main">
-    <h1 class="visually-hidden">Фото и видео города Седона</h1>
+    <h1 class="visually-hidden">Форма отзыва о городе</h1>
     <section class="main-promo">
       <h2 class="visually-hidden">Приветствие от города</h2>
       <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="456" height="350"
         alt="Приветствие города">
     </section>
     <section class="main-form">
+      <h2>Оставьте свой отзыв</h2>
+      <p>Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
     </section>
     <footer class="page-footer">
       <p class="page-footer-text">#Visitsedona</p>
