--- a/source/index.html
+++ b/source/index.html
@@ -24,11 +24,10 @@
           <a href="form.html">Форма отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="https://htmlacademy.ru/intensive/adaptive">Html Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </li>
       </ul>
       <button class="page-header__button" type="button"></button>
-    </nav>
     </nav>
   </header>
   <main class="page-main">
@@ -86,6 +85,11 @@
           <span class="main-features__text">Большинство едет в Гранд Каньон и толпится там</span>
         </li>
       </ol>
+    </section>
+    <section>
+      <span>Заинтересовались?</span>
+      <span>Укажите предполагаемые даты поеждки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
+      <button type="submit" aria-label="Переход на страницу поиска гостиниц">Показать гостиницы</button>
     </section>
   </main>
   <footer class="page-footer">
