--- a/source/photo.html
+++ b/source/photo.html
@@ -9,26 +9,21 @@
 
 <body class="page">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo" aria-label="Переход на главную страницу">
       <img src="https://via.placeholder.com/150x150" width="138" height="70" alt="Логотип города Седона">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a href="index.html">Главная</a>
+        <li class="site-list__item"><a href="index.html">Главная</a>
         </li>
-        <li class="site-list__item site-list__item--active">
-          <a>Фото и Видео</a>
+        <li class="site-list__item site-list__item--active"><a>Фото и Видео</a>
         </li>
-        <li class="site-list__item">
-          <a href="form.html">Форма отзыва</a>
+        <li class="site-list__item"><a href="form.html">Форма отзыва</a>
         </li>
-        <li class="site-list__item">
-          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <li class="site-list__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </li>
       </ul>
       <button class="page-header__button" type="button"></button>
-    </nav>
     </nav>
   </header>
   <main class="page-main">
@@ -44,35 +39,42 @@
         о политике и экономике.</span>
       <ul class="main-media__list">
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
+          <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150" width="280"
+              height="280" alt="Фото дороги"></a>
           <span class="main-media__text">Неродные просторы</span>
           <span class="main-media__text">Автор фото: Борис</span>
           <button type="button" class="main-media__button"></button>
           <span class="main-media__likes-number"></span>
         </li>
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото растения">
+          <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150" width="280"
+              height="280" alt="Фото растения"></a>
           <span class="main-media__text">Местная растительность</span>
           <span class="main-media__text">Автор фото: Сергей</span>
           <button type="button" class="main-media__button"></button>
           <span class="main-media__likes-number"></span>
         </li>
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
+          <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150" width="280"
+              height="280" alt="Фото дороги"></a>
           <span class="main-media__text">Дорога на север</span>
           <span class="main-media__text">Автор фото: Петр</span>
           <button type="button" class="main-media__button"></button>
           <span class="main-media__likes-number"></span>
         </li>
         <li class="main-media__item">
-          <img src="https://via.placeholder.com/150x150" width="280" height="280"
-            alt="Фото достопримечательности Мост Дьявола">
+          <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150" width="280"
+              height="280" alt="Фото достопримечательности Мост Дьявола"></a>
           <span class="main-media__text">Мост Дьявола</span>
           <span class="main-media__text">Автор фото: Антон</span>
           <button type="button" class="main-media__button"></button>
           <span class="main-media__likes-number"></span>
         </li>
       </ul>
+    </section>
+    <section>
+      <span>Все еще сомневаетесь?</span>
+      <span>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
     </section>
     <footer class="page-footer">
       <p class="page-footer-text">#Visitsedona</p>
